# qq-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  GHIDRA_MCP_RULES.md  LICENSE  README.md  SECURITY.md  load_env.ps1  requirements-ghidra-mcp.txt  run_rust_service_windows.ps1  run_rust_tool_windows.ps1  run_windows.ps1  run_windows_script.ps1
.github/workflows/: ci.yml
docs/: architecture.md  assets.md  coding-standards.md  ghidra-verification.md  infostorage.md  migration-map.md  msg3.md  txdata.md  web-ui.md
rust-msg3-parser/: Cargo.toml
rust-msg3-parser/src/: asset_audit.rs  capture.rs  catalog.rs  cfb.rs  config.rs  credentials.rs  db_analysis.rs  html_check.rs  info_storage.rs  inventory.rs  lib.rs  main.rs  migration_audit.rs  msg3_index.rs  msg3_log_service.rs  msg3_log_service_asset_candidates.rs  msg3_log_service_asset_http.rs  msg3_log_service_assets.rs  msg3_log_service_avatar.rs  msg3_log_service_config.rs  msg3_log_service_conversations.rs  msg3_log_service_frontend.rs  msg3_log_service_http.rs  msg3_log_service_info.rs  msg3_log_service_messages.rs  msg3_log_service_models.rs  msg3_log_service_rich.rs  msg3_log_service_tables.rs  msg3_log_service_text.rs  msg3_log_service_time.rs  msg3_parser.rs  msg3_samples.rs  preprocess.rs  qq_hash.rs  snapshot.rs  sqlite_tools.rs  txdata_codec.rs
