[package]
name = "msg3_richtext_parser_rs"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
description = "Local Rust analyzer for PC QQ Msg3 chat logs"

[features]
default = ["encoding_rs"]
encoding_rs = ["dep:encoding_rs"]

[dependencies]
anyhow = "1"
encoding_rs = { version = "0.8", optional = true }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1"
md5 = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
urlencoding = "2"
xz2 = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[[bin]]
name = "msg3_richtext_parser_rs"
path = "src/main.rs"

[[bin]]
name = "msg3_log_service_rs"
path = "src/bin/msg3_log_service_rs.rs"

[[bin]]
name = "info_storage_probe"
path = "src/bin/info_storage_probe.rs"

[[bin]]
name = "group_avatar_probe"
path = "src/bin/group_avatar_probe.rs"

[[bin]]
name = "cache_name_probe"
path = "src/bin/cache_name_probe.rs"

[[bin]]
name = "info_storage_field_scan"
path = "src/bin/info_storage_field_scan.rs"

[[bin]]
name = "file_index_probe"
path = "src/bin/file_index_probe.rs"

[[bin]]
name = "parser_group_selftest"
path = "src/bin/parser_group_selftest.rs"

[[bin]]
name = "parser_all_sample_selftest"
path = "src/bin/parser_all_sample_selftest.rs"

[[bin]]
name = "parser_coverage_check"
path = "src/bin/parser_coverage_check.rs"

[[bin]]
name = "msg3_info_parse"
path = "src/bin/msg3_info_parse.rs"

[[bin]]
name = "qq_analyzer_rs"
path = "src/bin/qq_analyzer_rs.rs"
